--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "tidid",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -24,6 +25,5 @@
     "nodemon": "^2.0.15",
     "qs": "^6.11.0"
   },
-  "devDependencies": {},
   "keywords": []
 }
